生htmlをpugに書き換え。popup.jsの配列をpushメソッドで管理

--- a/app/popup.pug
+++ b/app/popup.pug
@@ -11,6 +11,6 @@ html
     <!-- endbuild -->
   body
     info
-      <!-- build:js scripts/popupInfo.js -->
-      script(src="scripts/popupInfo.js")
+      <!-- build:js scripts/info.js -->
+      script(src="scripts/info.js")
       <!-- endbuild -->
