hashでのデータ表示

--- a/app/components/info.pug
+++ b/app/components/info.pug
@@ -1,13 +1,11 @@
 info
   table
     tr
-      td {pageIdTitle}
-      td {visitorTypeTitle}
+      td pageId
+      td visitorType
     tr
       td {pageId}
       td {visitorType}
   script.
-    this.pageIdTitle = opts.pageidtitle
-    this.visitorTypeTitle = opts.visitortypetitle
     this.pageId = opts.pageid
     this.visitorType = opts.visitortype
