コメントアウトをに

--- a/app/popup.pug
+++ b/app/popup.pug
@@ -2,15 +2,15 @@ doctype html
 html
   head
     meta(lang="en")
-    <!-- build:css styles/main.css -->
+    // build:css styles/main.css 
     link(rel="styles/main.css")
-    <!-- endbuild -->
+    // endbuild
     script(src="scripts/riot.csp.min.js")
-    <!-- build:js scripts/popup.js -->
+    // build:js scripts/popup.js
     script(src="scripts/popup.js")
-    <!-- endbuild -->
+    // endbuild
   body
     info
-      <!-- build:js scripts/info.js -->
+      // build:js scripts/info.js
       script(src="scripts/info.js")
-      <!-- endbuild -->
+      // endbuild
