コメントアウト書式修正

--- a/app/options.pug
+++ b/app/options.pug
@@ -18,6 +18,6 @@ html
         b line break
         | )
       button#save save
-      <!-- build:js scripts/options.js -->
+      // build:js scripts/options.js
       script(src="scripts/options.js")
-      <!-- endbuild -->
+      // endbuild
