--- a/app/components/info.pug
+++ b/app/components/info.pug
@@ -1,19 +1,12 @@
 info
   table(border="1")
     tr
-      th(each="{title in titles}") {title}
+      th(each="{title in rawdata}") {title}
     tr
-      th(each="{value in values}") {value}
+      th(each="{value in rawdata.value}") {value}
   script.
     /*console.log(opts.status)*/
     var rawData  = JSON.parse(
       document.getElementsByTagName("info")[0].getAttribute("status")
       )
-    var titles = []
-    var values = []
-    for(var i in rawData ) {
-      titles.push(i)
-      values.push(rawData[i])
-    }
-    this.titles = titles
-    this.values = values
+    this.rawdata = rawData
