--- a/app/options.pug
+++ b/app/options.pug
@@ -1,23 +1,24 @@
 doctype html
 html
-  head
-    title USERDIVE tracker
-  body
+head
+  title USERDIVE tracker
+body
+  div
     div
-      div
-        span ID
-        input#analytics-id(type="text" name="analytics-id")
-      div
-        span Env
-        input#env(type="text" name="env")
-      div
-        span Slource
-        input#host(type="text" name="host")
-      div
-        span Ignore domains (plz split
-        b line break
-        | )
-      button#save save
-      // build:js scripts/options.js
-      script(src="scripts/options.js")
-      // endbuild
+      span Id
+      input#analytics-id(type="text" name="analytics-id")
+    div
+      span Env
+      input#env(type="text" name="env")
+    div
+      span Source
+      input#host(type="text" name="host")
+    div
+      span Ignore domains (plz split
+      br
+      | line break)
+      textarea#ignore(rows="4" cols="40")
+    button#save save
+    // build:js scripts/options.js
+    script(src="scripts/options.js")
+    // endbuild
