見落としの差分修正

--- a/app/options.pug
+++ b/app/options.pug
@@ -15,10 +15,9 @@ html
         input#host(type="text" name="host")
       div
         span Ignore domains (plz split
-        br
-        | line break)
+          b line break)
         textarea#ignore(rows="4" cols="40")
-      button#save save
+      button#save Save
       // build:js scripts/options.js
       script(src="scripts/options.js")
       // endbuild
