--- a/app/options.pug
+++ b/app/options.pug
@@ -14,7 +14,7 @@ html
         span Source
         input#host(type="text" name="host")
       div
-        span Ignore domains (plz split
+        span Ignored domains (plz split
           b line break)
         textarea#ignore(rows="4" cols="40")
       button#save Save
