--- a/app/popup.pug
+++ b/app/popup.pug
@@ -3,7 +3,7 @@ html
   head
     meta(lang="en")
     // build:css styles/main.css
-    link(rel="styles/main.css")
+    link(href="styles/main.css")
     // endbuild
     script(src="scripts/riot.csp.min.js")
     // build:js scripts/popup.js
