mount時にoptionを引数として使用

--- a/app/components/info.pug
+++ b/app/components/info.pug
@@ -4,6 +4,4 @@ info
       th {name}
       th {value}
   script.
-    this.data  = JSON.parse(
-      document.getElementsByTagName("info")[0].getAttribute("status")
-      )
+      this.data = opts.data
