add vue.js instead of riot.js

--- a/app/popup.pug
+++ b/app/popup.pug
@@ -5,12 +5,13 @@ html
     // build:css styles/main.css
     link(href="styles/main.css")
     // endbuild
-    script(src="scripts/riot.csp.min.js")
+    script(src="scripts/vue.min.js")
     // build:js scripts/popup.js
     script(src="scripts/popup.js")
     // endbuild
   body
-    info
-    // build:js scripts/info.js
-    script(src="scripts/info.js")
-    // endbuild
+    div#app
+      table(border=1)
+        tr(v-for="(val, key) in cookieData")
+          th {{key}}
+          th {{val}}
