chore(popup.js) use props : do not success

--- a/app/popup.pug
+++ b/app/popup.pug
@@ -7,7 +7,7 @@ html
     // endbuild
   body
     #info
-      info
+      info(v-bind:pageInfo='datas')
     // build:js scripts/bundle.js
     script(src="scripts/bundle.js")
     // endbuild
