--- a/app/popup.pug
+++ b/app/popup.pug
@@ -7,7 +7,7 @@ html
     // endbuild
   body
     #info
-      info(v-bind:pageInfo='datas')
+      info
     // build:js scripts/bundle.js
     script(src="scripts/bundle.js")
     // endbuild
