chore(index.pug) fix path

--- a/app/popup.pug
+++ b/app/popup.pug
@@ -8,6 +8,6 @@ html
   body
     #info
       info
-    // build:js scripts/bundle.js
-    script(src="scripts/bundle.js")
+    // build:js scripts/popup.bundle.js
+    script(src="scripts/popup.bundle.js")
     // endbuild
