--- a/app/popup.pug
+++ b/app/popup.pug
@@ -5,12 +5,7 @@ html
     // build:css styles/main.css
     link(href="styles/main.css")
     // endbuild
-    script(src="scripts/riot.csp.min.js")
-    // build:js scripts/popup.js
-    script(src="scripts/popup.js")
-    // endbuild
   body
-    info
-    // build:js scripts/info.js
-    script(src="scripts/info.js")
-    // endbuild
+    #info
+      info
+    script(src="scripts/popup.bundle.js")
