chore(gulpfile) refactor gulp tasks

--- a/app/popup.pug
+++ b/app/popup.pug
@@ -2,10 +2,7 @@ doctype html
 html
   head
     meta(lang="en")
-    // build:css styles/main.css
-    link(href="styles/main.css")
-    // endbuild
   body
     #info
       info
-    script(src="scripts/popup.bundle.js")
+    script(src="scripts/popup.js")
