fix(app) remove unused

--- a/app/options.pug
+++ b/app/options.pug
@@ -4,19 +4,21 @@ html
     title USERDIVE tracker
   body
     div
-      div
-        span Id
-        input#analytics-id(type="text" name="analytics-id")
-      div
-        span Env
-        input#env(type="text" name="env")
-      div
-        span Source
-        input#host(type="text" name="host")
-      div
-        span Ignored domains (plz split
-          b line break)
-          br
-        textarea#ignore(rows="4" cols="40")
-      button#save Save
-      script(src="scripts/options.js")
+      span state
+      span#active
+    div
+      span Id
+      input#analytics-id(type="text" name="analytics-id")
+    div
+      span Env
+      input#env(type="text" name="env")
+    div
+      span Source
+      input#host(type="text" name="host")
+    div
+      span Ignored domains (plz split
+        b line break)
+        br
+      textarea#ignore(rows="4" cols="40")
+    button#save Save
+    script(src="scripts/options.js")
